--- a/index.html
+++ b/index.html
@@ -184,60 +184,219 @@
       <p>أن نكون الرائدين في تقديم الحلول التقنية المبتكرة والمواقع الإلكترونية المتطورة التي تلبي احتياجات العصر الرقمي.</p>
     </section>
 
-    <!-- Web Packages -->
+    <!-- Ready-Made Products -->
     <section class="section">
-      <h2 class="section-title">باقات الخدمات التقنية</h2>
-      <div class="packages-grid">
-        <article class="package-card economy">
-          <h3>باقة المواقع الأساسية</h3>
-          <div class="features">
-            <h4>تطوير المواقع</h4>
-            <ul>
-              <li>تصميم موقع تعريفي احترافي</li>
-              <li>تصميم متجاوب لجميع الأجهزة</li>
-              <li>نظام إدارة المحتوى</li>
-              <li>تحسين محركات البحث الأساسي</li>
-            </ul>
+      <h2 class="section-title">المشاريع الجاهزة</h2>
+      <div class="products-grid">
+        <!-- Product 1 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-utensils"></i>
           </div>
-          <div class="features">
-            <h4>الخدمات الإضافية</h4>
-            <ul>
-              <li>استضافة مجانية لسنة واحدة</li>
-              <li>شهادة الأمان SSL</li>
-              <li>دعم فني لمدة 6 أشهر</li>
-              <li>تدريب على استخدام الموقع</li>
-            </ul>
+          <h3>منيو مطعم تفاعلي</h3>
+          <p>منيو إلكتروني مع إرسال الطلبات لواتساب</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 3 أيام</span>
+            <span class="price">1,500 ريال</span>
           </div>
-          <div class="package-footer">
-            <span class="price">5000 ريال</span>
-            <a href="#contact" class="btn">اطلب الآن</a>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 2 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-user-clock"></i>
           </div>
-        </article>
-        <article class="package-card comprehensive">
-          <h3>باقة الحلول المتكاملة</h3>
-          <div class="features">
-            <h4>التطوير المتقدم</h4>
-            <ul>
-              <li>تطوير تطبيقات ويب متقدمة</li>
-              <li>أنظمة إدارة مخصصة</li>
-              <li>متاجر إلكترونية متكاملة</li>
-              <li>تطبيقات الهاتف المحمول</li>
-            </ul>
+          <h3>نظام الحضور والانصراف</h3>
+          <p>تتبع حضور الموظفين مع التقارير</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 7 أيام</span>
+            <span class="price">3,500 ريال</span>
           </div>
-          <div class="features">
-            <h4>الخدمات الشاملة</h4>
-            <ul>
-              <li>استضافة سحابية متقدمة</li>
-              <li>أمان وحماية متطورة</li>
-              <li>دعم فني على مدار الساعة</li>
-              <li>تحديثات وصيانة مستمرة</li>
-            </ul>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-blog"></i>
           </div>
-          <div class="package-footer">
-            <span class="price">15000 ريال</span>
-            <a href="#contact" class="btn">اطلب الآن</a>
+          <h3>موقع مدونة شخصية</h3>
+          <p>مدونة احترافية مع لوحة تحكم</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 5 أيام</span>
+            <span class="price">2,200 ريال</span>
           </div>
-        </article>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 4 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-building"></i>
+          </div>
+          <h3>موقع تعريفي للشركات</h3>
+          <p>موقع احترافي لعرض خدمات الشركة</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 4 أيام</span>
+            <span class="price">2,800 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 5 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-shopping-bag"></i>
+          </div>
+          <h3>متجر إلكتروني بسيط</h3>
+          <p>متجر لبيع المنتجات مع نظام دفع</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 10 أيام</span>
+            <span class="price">5,500 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 6 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-calendar-alt"></i>
+          </div>
+          <h3>نظام حجز المواعيد</h3>
+          <p>حجز المواعيد للعيادات والصالونات</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 6 أيام</span>
+            <span class="price">3,200 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 7 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
+          <h3>منصة تعليمية</h3>
+          <p>موقع للكورسات والدروس التعليمية</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 12 أيام</span>
+            <span class="price">6,800 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 8 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-home"></i>
+          </div>
+          <h3>موقع عقاري</h3>
+          <p>عرض وبحث العقارات مع الخرائط</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 8 أيام</span>
+            <span class="price">4,500 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 9 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-newspaper"></i>
+          </div>
+          <h3>موقع إخباري</h3>
+          <p>موقع أخبار مع نظام إدارة المحتوى</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 9 أيام</span>
+            <span class="price">4,200 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 10 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-camera"></i>
+          </div>
+          <h3>معرض صور احترافي</h3>
+          <p>موقع لعرض الأعمال الفوتوغرافية</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 4 أيام</span>
+            <span class="price">2,000 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 11 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-car"></i>
+          </div>
+          <h3>موقع تأجير سيارات</h3>
+          <p>حجز وتأجير السيارات أونلاين</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 11 أيام</span>
+            <span class="price">5,800 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 12 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-dumbbell"></i>
+          </div>
+          <h3>موقع نادي رياضي</h3>
+          <p>عضويات وجدولة التمارين</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 7 أيام</span>
+            <span class="price">3,800 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 13 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-clipboard-list"></i>
+          </div>
+          <h3>نظام إدارة المهام</h3>
+          <p>تنظيم المهام والمشاريع للفرق</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 8 أيام</span>
+            <span class="price">4,000 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 14 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-chart-pie"></i>
+          </div>
+          <h3>لوحة تحكم تحليلية</h3>
+          <p>عرض البيانات والإحصائيات</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 6 أيام</span>
+            <span class="price">3,600 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
+
+        <!-- Product 15 -->
+        <div class="product-card">
+          <div class="product-icon">
+            <i class="fas fa-envelope"></i>
+          </div>
+          <h3>نظام إدارة العملاء</h3>
+          <p>CRM لإدارة العملاء والمبيعات</p>
+          <div class="product-details">
+            <span class="duration"><i class="fas fa-clock"></i> 14 أيام</span>
+            <span class="price">7,500 ريال</span>
+          </div>
+          <a href="#contact" class="product-btn">اطلب الآن</a>
+        </div>
       </div>
     </section>
 
